# LirfuNeuralNetwork-cpp

./: CMakeLists.txt  Data.h  Matrix.cpp  Matrix.h  MatrixTests.h  NetworkBuilder.cpp  NetworkBuilder.h  NeuralNetwork.cpp  NeuralNetwork.h  README.md  SeparatedData.h  SimpleData.h  demo.cpp  main.cpp
data/: Data.h  DataUtils.h  SeparatedData.h  SimpleData.h
demos/: Demos.cpp  Demos.h  grapher.sh
descentmethods/: DescendMethod.h  VanillaGradientDescend.h
functions/: DerivativeFunction.h  IFunction.h  Linear.h  Sigmoid.h
layers/: FullyConnectedLayer.h  InnerLayer.h  InputLayer.h  Layer.h
matrix/: Matrix.h  MatrixDimension.cpp  MatrixDimension.h  MatrixTests.h
weightinitializers/: RandomWeightInitializer.h  WeightInitializer.h
